--- a/support.html
+++ b/support.html
@@ -156,9 +156,9 @@
         </div>
         <div id="companyInfo">
           <h1>Contact</h1>
-          <h2>Explore California</h2>
-          <p>5605 Nota Street<br />
-            Ventura, CA 93003</p>
+          <h2>Sanjay Khambam</h2>
+          <p>+91 8886666051<br />
+            Hyderabad, INDIA 500073</p>
           <p>866.555.4310<br />866.555.4314 <em>(24 hour support)</em></p>
         </div>
       </div>
